<resources>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="note">Note</string>
    <string name="profile">Profile</string>
    <string name="follow_us">Follow us:</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About us</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="success">Success</string>
    <string name="successfully">Successfully</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="finish">Finish</string>
    <string name="finished">Finished</string>
    <string name="processing">Processing&#8230;</string>
    <string name="msg_connection_network_error">There are no network. Please check connection networking</string>
    <string name="msg_network_connected">Connected</string>
    <string name="msg_network_notify">Network error please check your internet connection and try again by closing app and open</string>
    <string name="msg_register_successfully">Register successfully</string>
    <string name="msg_login_successfully">Login successfully</string>
    <string name="msg_username_required">Username is required</string>
    <string name="msg_email_required">Email not valid, eg: example@info.com</string>
    <string name="msg_password_required">Password is required</string>
    <string name="msg_password_not_valid">Password must be from 6 characters</string>
    <string name="msg_password_not_match">Password not match</string>
    <string name="msg_name_required">First name is required</string>
    <string name="msg_enter_all_field">Please enter fields are empty</string>
    <string name="msg_bank_account_required">Bank acocunt is required</string>
    <string name="msg_address_required">Address is required</string>
    <string name="msg_phone_required">phone is required</string>
    <string name="msg_invalid_image_format">This is not a picture</string>
    <string name="msg_update_successfully">Updated successfully</string>
    <string name="msg_update_fail">Fail to update, please try again later</string>
    <string name="msg_turning_on_location">Please turn on your location to be able to get your current location</string>
    <string name="msg_confirm_log_out">Do you want to log out?</string>
    <string name="msg_confirm_exit">Do you want to exit app?</string>
    <string name="msg_no_email_client">There are no email clients installed.</string>
    <string name="msg_no_email">This user has no an email address</string>
    <string name="msg_no_phone_number">This user has no phone number</string>
    <string name="msg_can_not_get_email">Fail login can not get your email bussiness_address</string>
    <string name="msg_have_some_errors">Have some error, please try again</string>
    <string name="msg_no_network">Network is not available</string>
    <string name="msg_search_required">Please enter anything you want to search</string>
    <string name="msg_no_more_data">No more data</string>
    <string name="msg_not_found_data">No found data</string>
    <string name="login">Sign In</string>
    <string name="login_facebook">facebook</string>
    <string name="login_google">Google</string>
    <string name="signup">Sign up</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="name">Full Name</string>
    <string name="email_">Email</string>
    <string name="user_name">User name</string>
    <string name="address_">Address</string>
    <string name="phone_number_star">Phone Number</string>
    <string name="forgot_password">Forgot your password? Tap here</string>
    <string name="reset_my_password">Reset My Password</string>
    <string name="term_and_conditions">Term &amp; Conditions . Privacy Policy</string>
    <string name="have_not_yet_account">Have not an account yet? SIGN UP now</string>
    <string name="account_have_aready">Have already account? SIGN IN Now</string>
    <string name="email_sent">We have sent you an email</string>
    <string name="no_worries">No worries</string>
    <string name="send_email">Send Email</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="last_name">Achternaam</string>
    <string name="first_name">Voornaam</string>
    <string name="phone">Phone</string>
    <string name="phone_">Telefoonnummer:</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="post_code">PostCode</string>
    <string name="company">Company</string>
    <string name="confirm">Confirm</string>
    <string name="select_file">Choose a file&#8230;</string>
    <string name="file_is_max">File is required smaller than 3MB</string>
    <string name="select_file_to_upload">Select a file to Upload</string>
    <string name="msg_file_is_not_format">Only accept *.jpg, *.png file</string>
    <string name="price_bind">$%1$s</string>
    <string name="input_your_name">Your name (*)</string>
    <string name="input_your_email">Your email (*)</string>
    <string name="subject">Subject</string>
    <string name="input_subject">Your subject (*)</string>
    <string name="content">Content</string>
    <string name="input_your_feedback">Input your feedback (*)</string>
    <string name="send_feedback">SEND FEEDBACK</string>
    <string name="message_name_empty">Please input your name.</string>
    <string name="message_email_empty">Please input your email.</string>
    <string name="message_email_wrong_format">Your mail is not correct format. Try again please!</string>
    <string name="message_subject_empty">Please input the subject.</string>
    <string name="message_content_empty">Please input your feedback.</string>
    <string name="message_send_feedback_successfully">Thank you! We received your feedback. We will check and reply you soon.</string>
    <string name="message_error_send_feedback">Having problem when sending your feedback. Try again please!</string>
    <string name="message_error_load">Error load data !</string>
    <string name="message_comment_empty">Comment empty</string>
    <string name="message_search_empty">Key search empty</string>
    <string name="msg_register_success">Register Success!</string>
    <string name="msg_log_in_face_error">Log in facebook fail!</string>
    <string name="settings_notify">Notification</string>
    <string name="settings_notify_hint">Notify me all</string>
    <string name="or">Or</string>
    <string name="terms_and_conditions"><![CDATA[Door te klikken op aanmelden ga ik akkoord met de algemene voorwaarden]]></string>
    <string name="terms">met de algemene voorwaarden</string>
    <string name="msg_terms_conditions"><![CDATA[Please agree to all terms & conditions]]></string>
    <string name="menu">Menu</string>
    <string name="fomat_discount">%1$s%2$s Discount</string>
    <string name="fomat_food_items">%1$s items</string>
    <string name="my_orders">My Orders</string>
    <string name="my_details">My Details</string>
    <string name="delivery_address">Delivery Addresses</string>
    <string name="add_promo_code">Add a Promo Code</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="my_account">My Account</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="popular">Popular</string>
    <string name="format_currency">€%1$s</string>
    <string name="view_cart">View basket</string>
    <string name="currency">€</string>
    <string name="no_propertis">No property</string>
    <string name="type_key_words">Type keywords</string>
    <string name="price">€%1$s (+ €%2$s)</string>
    <string name="no_topping">No toppings</string>
    <string name="save">Save</string>
    <string name="toppings">Toppings</string>
    <string name="toppings_">Toppings: </string>
    <string name="property">Property</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_product_to_cart">Add %1$s to cart</string>
    <string name="remove_product_from_cart">Remove %1$s from cart</string>
    <string name="my_cart">My Cart</string>
    <string name="ordering_for">Ordering for</string>
    <string name="change">Change</string>
    <string name="sub_total">Sub total</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="rider_tip">Rider tip</string>
    <string name="order_total">Order Total</string>
    <string name="go_to_check_out">Go to Checkout</string>
    <string name="hint_your_comment">Your Comment...</string>
    <string name="promotion_detail">Promotion Details</string>
    <string name="total_price_and_created_date">€%1$s - %2$s</string>
    <string name="note_my_details">Your account email address is %1$s .\nYou can change this by visting Sea Palace website.</string>
    <string name="have_a_code_enter_here">Have a code? Enter it here...</string>
    <string name="add_new_delivery_address">Add New Address...</string>
    <string name="contact">Contact</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="news">News</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="about_note_1">2018 SuuSoft.com</string>
    <string name="about_note_2">Made by BOSS SuuSoft.</string>
    <string name="password_old">Current Password</string>
    <string name="password_new">New Password</string>
    <string name="retype_pass_word">Re-type new password</string>
    <string name="msg_error_math_old">Please input new password other current password.</string>
    <string name="msg_error_empty">Please input %1$s</string>
    <string name="msg_error_math">Password not match.</string>
    <string name="send">Send</string>
    <string name="description_forgot_pass">To reset your password please enter your email address and we will send you an email with instructions on how to reset your password.</string>
    <string name="order_details">Order Details</string>
    <string name="order_number">Order Number</string>
    <string name="delived_from">Delivered From</string>
    <string name="delivered_to">Delivered To</string>
    <string name="status">Status</string>
    <string name="close">Close</string>
    <string name="term_and_conditions_header"><![CDATA[Term & Conditions]]></string>
    <string name="content_term_conditions">Terms and Conditions are a set of rules and guidelines that a user must agree to in order to use your website or mobile app. It acts as a legal contract between you (the company) who has the website or mobile app and the user who access your website and mobile app.  It’s up to you to set the rules and guidelines that the user must agree to. You can think of your Terms and Conditions agreement as the legal agreement where you maintain your rights to exclude users from your app in the event that they abuse your app, and where you maintain your legal rights against potential app abusers, and so on.  Terms and Conditions are also known as Terms of Service or Terms of Use.  This type of legal agreement can be used for both your website and your mobile app. It’s not required (it’s not recommended actually) to have separate Terms and Conditions agreements: one for your website and one for your mobile app.</string>
    <string name="full_name">Full Name</string>
    <string name="complete">Complete</string>
    <string name="forgot_password_title">Forgot Password</string>
</resources>