<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_2x"
        android:layout_marginRight="@dimen/dimen_2x"
        android:layout_marginTop="@dimen/dimen_2x"
        android:background="@drawable/bg_radius_white_dialog"
        android:orientation="vertical">

        <com.suusoft.restaurantuser.widgets.textview.TextViewLatoBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_2x"
            android:gravity="center"
            android:text="@string/forgot_password_title"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_large" />


        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dimen_2x"
            android:layout_marginRight="@dimen/dimen_2x"
            android:layout_marginTop="@dimen/dimen_4x"
            android:hint="@string/email_"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:singleLine="true"
            android:theme="@style/EditTextBase.EditTextBlack"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorSecondary"
            android:textSize="@dimen/text_size_normal" />


        <com.suusoft.restaurantuser.widgets.textview.TextViewLatoRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_2x"
            android:layout_marginLeft="@dimen/dimen_5x"
            android:layout_marginRight="@dimen/dimen_5x"
            android:layout_marginTop="@dimen/dimen_1x"
            android:gravity="center"
            android:text="@string/description_forgot_pass"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/text_size_small" />

        <android.support.v7.widget.CardView
            android:layout_marginBottom="@dimen/dimen_2x"
            android:layout_marginLeft="@dimen/dimen_2x"
            android:layout_marginRight="@dimen/dimen_2x"
            android:layout_marginTop="@dimen/dimen_3x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/dimen_05x"
            android:translationZ="@dimen/dimen_1x"
            app:cardCornerRadius="@dimen/dimen_3x">

            <com.suusoft.restaurantuser.widgets.textview.TextViewLatoMedium
                android:id="@+id/tv_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_order_radius"
                android:gravity="center"
                android:padding="@dimen/dimen_x1x"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />
        </android.support.v7.widget.CardView>


    </LinearLayout>

    <ImageView
        android:visibility="gone"
        android:layout_width="@dimen/dimen_logo_changepass"
        android:layout_height="@dimen/dimen_logo_changepass"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_boder_circle_primary"
        android:src="@drawable/ic_change_pass" />
</RelativeLayout>